--- a/package.json
+++ b/package.json
@@ -26,31 +26,31 @@
   },
   "dependencies": {
     "aws-sdk": "~2.0.0-rc9",
-    "chalk": "~1.0.0",
-    "commander": "^2.2.0",
-    "concat-stream": "~1.4.5",
-    "errorhandler": "^1.0.1",
-    "express": "^4.9.7",
-    "glob": "~3.2.9",
-    "image-type": "^2.0.2",
-    "lodash": "~2.4.1",
+    "chalk": "~3.0.0",
+    "commander": "^4.1.0",
+    "concat-stream": "^2.0.0",
+    "errorhandler": "^1.5.1",
+    "express": "^4.17.1",
+    "glob": "^7.1.6",
+    "image-type": "^4.1.0",
+    "lodash": "~4.17.15",
     "map-stream": "~0.1.0",
-    "mkdirp": "^0.5.0",
-    "morgan": "^1.0.1",
-    "request": "~2.34.0",
-    "sharp": "^0.15.0",
-    "twit": "~1.1.15"
+    "mkdirp": "^0.5.1",
+    "morgan": "^1.9.1",
+    "request": "^2.88.0",
+    "sharp": "^0.23.4",
+    "twit": "~2.2.11"
   },
   "devDependencies": {
     "chai": "~1.9.0",
     "connect-livereload": "~0.3.2",
     "dotenv": "~0.2.8",
     "ejs": "~1.0.0",
-    "gulp": "^3.8.10",
-    "gulp-bump": "^0.1.8",
-    "gulp-jshint": "~1.4.2",
-    "gulp-mocha": "~2.2.0",
-    "gulp-nodemon": "~1.0.0",
+    "gulp": "^4.0.2",
+    "gulp-bump": "^3.1.3",
+    "gulp-jshint": "~2.1.0",
+    "gulp-mocha": "~7.0.2",
+    "gulp-nodemon": "~2.4.2",
     "gulp-util": "~2.2.14",
     "jshint-stylish": "~0.1.5",
     "proxyquire": "^1.7.9",
