--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "mkdirp": "^0.5.0",
     "morgan": "^1.0.1",
     "request": "~2.34.0",
-    "sharp": "^0.16.2",
+    "sharp": "^0.23.4",
     "twit": "~1.1.15"
   },
   "devDependencies": {
@@ -56,7 +56,6 @@
     "proxyquire": "^2.1.3",
     "sandboxed-module": "^2.0.3",
     "sinon": "~8.0.4",
-    "sinon-chai": "~3.4.0",
-    "jshint": "^2.11.0-rc1"
+    "sinon-chai": "~3.4.0"
   }
 }
