--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ejs": "~3.0.1",
     "gulp": "^4.0.2",
     "gulp-bump": "^3.1.3",
+    "jshint": "^2.11.0",
     "gulp-jshint": "~2.1.0",
     "gulp-mocha": "~7.0.2",
     "gulp-nodemon": "~2.4.2",
